# Sensor-Logger

./: .gitignore  CMakeLists.txt  README.md
include/: LightSensor.hpp  Logger.hpp  Sensor.hpp  TemperatureSensor.hpp
src/: Logger.cpp  Sensor.cpp  main.cpp
